log
Fri 06 Oct 2023 03:18:08 PM UTC: 
 tests:  0|5
total_score: 0/70
cc73da8
Fri 06 Oct 2023 03:19:17 PM UTC: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:57:11: error: unused variable ‘num’ [-Werror=unused-variable]
   57 |       int num = 1;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
7c7afa3
Fri 06 Oct 2023 03:19:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5556403
Fri 06 Oct 2023 03:30:48 PM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:75:5: error: unused variable ‘i’ [-Werror=unused-variable]
   75 | int i=4;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
0d9ab9a
Fri 06 Oct 2023 03:30:57 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
40892d4
